Use arrow keys to navigate through users on Views-based login screen.

Bug: 845037
Change-Id: I60574af1513793a0872c4d02c20c829f0adda9df
Reviewed-on: https://chromium-review.googlesource.com/1117769
Commit-Queue: Quan Nguyen <qnnguyen@chromium.org>
Reviewed-by: Dan Erat <derat@chromium.org>
Reviewed-by: Jacob Dufault <jdufault@chromium.org>
Reviewed-by: Michael Wasserman <msw@chromium.org>
Cr-Commit-Position: refs/heads/master@{#572389}