ash/login/ui/login_keyboard_test_base.h
@@ -8,6 +8,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 #include <memory>
 
+#include "ash/public/interfaces/login_user_info.mojom.h"
 #include "ash/test/ash_test_base.h"
 
 namespace keyboard {
@@ -48,6 +49,9 @@ class LoginKeyboardTestBase : public AshTestBase {
   // Loads the number of test users specified by |count|.
   void LoadUsers(int count);
 
+  // Loads the number of test public account users specified by |count|.
+  void LoadPublicAccountUsers(int count);
+
   // Loads user with the specified |email|.
   void LoadUser(const std::string& email);
 
@@ -58,6 +62,7 @@ class LoginKeyboardTestBase : public AshTestBase {
  private:
   keyboard::KeyboardController* keyboard_controller_ = nullptr;
   LoginScreenController* login_controller_ = nullptr;
+  std::vector<mojom::LoginUserInfoPtr> users_;
 
   DISALLOW_COPY_AND_ASSIGN(LoginKeyboardTestBase);
 };
