ash/login/ui/views_utils.cc
@@ -3,7 +3,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 // Use of this source code is governed by a BSD-style license that can be
 // found in the LICENSE file.
 
-#include "ash/login/ui/layout_util.h"
+#include "ash/login/ui/views_utils.h"
 
 #include "ash/login/ui/non_accessible_view.h"
 #include "ash/shell.h"
@@ -12,7 +12,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "ui/views/widget/widget.h"
 
 namespace ash {
-namespace login_layout_util {
+namespace login_views_utils {
 
 views::View* WrapViewForPreferredSize(views::View* view) {
   auto* proxy = new NonAccessibleView();
@@ -53,5 +53,14 @@ bool ShouldShowLandscape(const views::Widget* widget) {
   return true;
 }
 
-}  // namespace login_layout_util
+bool HasFocusInAnyChildView(views::View* view) {
+  // Find the topmost ancestor of the focused view, or |view|, whichever comes
+  // first.
+  views::View* search = view->GetFocusManager()->GetFocusedView();
+  while (search && search != view)
+    search = search->parent();
+  return search == view;
+}
+
+}  // namespace login_views_utils
 }  // namespace ash
